--- a/member.html
+++ b/member.html
@@ -44,8 +44,13 @@
         <img src="images/icon_wakaba.jpg" alt="わかば">
           <p>新入生。Webデザイナーになるのが夢。</p>
       </div>
+    <div class="col harf">
+        <h2>Old Student</h2>    
+        <img src="images/icon_wakaba.jpg" alt="ひろこ">
+          <p>てすとてすとてすとてすと</p>
+    </div>    
     </div>
-
+    
     <div class="row">
       <h2>メンバーに対して思うこと</h2>
       <table>
